# cabocha2ud

./: Pipfile  README.md  cab2ud.py  cab2ud_bccwj_full.sh  cab2ud_bccwj_full_casever.sh  cab2ud_bccwj_full_luw.sh  cab2ud_cejc_full.sh  cab2ud_gsd_full.sh  cab2ud_gsd_full_luw.sh  pyproject.toml  release_bccwj_ud.sh  validate_gsd_and_bccwj.sh
base/: __init__.py  annotation.py  bunsetu.py  component.py  document.py  sentence.py  word.py
cabocha2ud/: __main__.py
conf/: auto_hand_fix.yaml  auto_hand_fix_luw.yaml  bccwj_dep_luw_rule.json  bccwj_dep_suw_rule.json  bccwj_dep_suw_rule.yaml  bccwj_dep_suw_rule_use_pas.yaml  bccwj_luw_args.yaml  bccwj_pos_luw_rule.json  bccwj_pos_suw_rule.json  bccwj_pos_suw_rule.yaml  bccwj_suw_args.yaml  cejc_luw_args.yaml  cejc_suw_args.yaml  default_bccwj_args.yaml  default_cejc_args.yaml  default_gsd_args.yaml  default_luw_args.yaml  default_nikkei_args.yaml  default_pud_args.yaml  default_suw_args.yaml  dep_suw_rule.yaml  filelist_train_mapping.txt  gsd_luw_args.yaml  gsd_suw_args.yaml  luw_bccwj_args.yaml  luw_cejc_args.yaml  luw_gsd_args.yaml  luw_pud_args.yaml  missing_bccwj_match.json  nikkei_luw_args.yaml  pos_suw_rule.yaml  pud_luw_args.yaml  pud_suw_args.yaml  rule_nsubjcase_list.toml  rule_objcase_list.toml
convert_paren/: convertParen.py  ud.py
fixed_newdoc/: fixed_newdoc.py
ginza_luw_split/: README.md  convert_kc.py  ginza_dummy_tok_test.sh  merge_oneline_sentence.py  show_luw_result.py  test_comainu.sh  test_ginza.sh  tokenizer.py  train_ginza.sh
lib/: iterate_function.py  kana2roman.py
merge_gsd/: merge_sp_to_conll.py
(+79 files in other folders)
